<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/bg_background"
    android:gravity="center"
    tools:context="com.dmf.distribuicaoapp.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
        
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/logotipo"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_mail"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_senha"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/tv_manter_conectado" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/manter_conectado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:textOff="N"
                android:textOn="S" />

            <Button
                android:text="@string/bt_logar"
                android:onClick="realizarLogin"
                style="@style/_botao" />

            <Button
                android:text="@string/bt_registrar"
                style="@style/_botao" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
